# relucent

./: .buildinfo  .gitignore  README.md  certify.html  complex.html  configuration.html  covectors.html  exploration.html  exploration_verification.html  filtration.html  genindex.html  incidence.html  index.html  modules.html  network_definitions.html  nn.html  objects.inv  persistence.html  polyhedron.html  py-modindex.html  pyproject.toml  pyrightconfig.json  quickstart.html  relucent.html  requirements.txt  search.html  search_geometry.html  search_shi_and_graphs.html  searchindex.js  todo.md  topology.html  topology_api.html  utilities.html
.basedpyright/: baseline.json
.github/workflows/: build-sphinx-docs.yml  publish.yml  python-package.yml
_sources/: configuration.rst.txt  exploration.rst.txt  filtration.rst.txt  incidence.rst.txt  index.rst.txt  modules.rst.txt  network_definitions.rst.txt  polyhedron.rst.txt  relucent.rst.txt  search_geometry.rst.txt  search_shi_and_graphs.rst.txt  topology.rst.txt  utilities.rst.txt
_static/: custom.js
docs/: betti_computation.md  certify.rst  complex.rst  conf.py  configuration.rst  covectors.rst  exploration.rst  exploration_verification.rst  filtration.rst  incidence.rst  index.rst  network_definitions.rst  nn.rst  persistence.rst  polyhedron.rst  quickstart.rst  search_geometry.rst  search_shi_and_graphs.rst  topology.rst  topology_api.rst  utilities.rst  verify.rst
docs/_templates/: layout.html
scripts/: compare_boundary_methods.py  diagnose_chain_complex.py  diagnose_shi_bound.py  refresh_integration_golden.py
src/relucent/: README.md  __init__.py  _gf2.py  _gf2_rank.c  _logging.py  _network_scale.py  _torch_compat.py  boundary_exclusion_trie.py  boundary_mip.py  boundary_search.py  bvs.py  calculations.py  certify.py  complex.py  complex_graph.py  config.py  convert_model.py  errors.py  exploration.py  filtration.py  incidence.py  meta_graph.py  model.py  morse.py  numeric_tolerances.py  persistence.py  poly.py  search.py  ss.py  topology.py  utils.py  verify.py  vis.py  worker_context.py
tests/: conftest.py  doc_snippets.py  test_assign_contracted_shis.py  test_betti_decision_boundaries.py  test_betti_persistence_alignment.py  test_betti_torus.py  test_boundary_discovery.py  test_boundary_exclusion_trie.py  test_boundary_genericity.py  test_boundary_mip.py  test_boundary_phantom.py  test_calculations.py  test_complex.py  test_convert_model.py  test_covectors.py  test_cubical_incidence.py  test_docs.py  test_get_betti_numbers_backends.py  test_gf2_rank_sparse.py  test_hyperplane_arrangement.py  test_imports.py  test_meta_graph.py  test_meta_graph_one_cells.py  test_meta_graph_shi_regression.py  test_model.py  test_morse.py  test_no_torch.py  test_numeric_tolerances.py  test_persistence.py  test_poly_1cells.py  test_polyhedron.py  test_readme.py  test_save_load.py  test_search_phantom_neighbors.py  test_shi_bound_regression.py  test_shi_objective_tolerance.py  test_ss.py  test_topology_gf2_matmul.py  test_utils.py  test_verify_invariants.py  (+2 more)
tests/data/: synthetic_progress_ckpt0.pt  torus_boundary_model_seed2.pt
tests/integration/: __init__.py  conftest.py  helpers.py  test_boundary_discovery_mlp.py  test_boundary_parity.py  test_dual_graph_roundtrip.py  test_meta_graph_chain.py  (+3 more)
(+46 files in other folders)
