[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "relucent"
description = "Explore the polyhedral complexes of ReLU neural networks."
version = "0.7.2"
requires-python = ">= 3.11"

dependencies = [
    "pandas>=2.3",
    "gurobipy>=12.0",
    "networkx>=3.6",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "Pillow>=12.1",
    "plotly>=6.3",
    "scikit_learn>=1.8",
    "scipy>=1.17",
    "tqdm>=4.67",
    "torch>=2.3",
]
authors = [{ name = "Blake B. Gaines" }]
license = "AGPL-3.0-or-later"
readme = "README.md"

[project.optional-dependencies]
vis = ["pyvis>=0.3", "kaleido"]
dev = ["pytest", "ruff", "basedpyright>=1.39.0"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Repository = "https://github.com/bl-ake/relucent"
Documentation = "https://bl-ake.github.io/relucent/"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:This process .* is multi-threaded, use of fork\\(\\).*:DeprecationWarning",
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["relucent"]

[tool.basedpyright]
typeCheckingMode = "recommended"
include = ["src/relucent", "tests"]
exclude = ["**/site-packages/**"]
pythonVersion = "3.13"
