[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "relucent"
description = "Explore the polyhedral complexes of ReLU neural networks."
version = "0.9.0"
requires-python = ">= 3.11"

dependencies = [
    "pandas>=2.3",
    "gurobipy>=12.0.1",
    "networkx>=3.6",
    "matplotlib>=3.10",
    "numpy>=2.4.1",
    "Pillow>=12.1.0",
    "plotly>=6.3",
    "scikit_learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.0",
    "sphinx>=9.0.4",
    "pytest>=9.0.2",
]
authors = [{ name = "Blake B. Gaines" }]
license = "AGPL-3.0-or-later"
readme = "README.md"

[project.optional-dependencies]
torch = ["torch>=2.5.0"]
vis = ["pyvis>=0.3", "kaleido"]
dev = ["pytest", "ruff", "basedpyright>=1.39.0"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Repository = "https://github.com/bl-ake/relucent"
Documentation = "https://bl-ake.github.io/relucent/"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:This process .* is multi-threaded, use of fork\\(\\).*:DeprecationWarning",
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["relucent"]